Fix: - changed quotes card color - switched from DateTimePicker to MobileDateTimePicker for better content visibility - changed the bgColor of selected date when it's focused on modal open - controlled the endTime to go according to startTime - changed label from start\end-Time to start\end-Date - fixed minute change isnt showing - fixed invalid date showing

--- a/src/app/assets/sass/react-big-calendar.scss
+++ b/src/app/assets/sass/react-big-calendar.scss
@@ -940,7 +940,7 @@ button.rbc-input::-moz-focus-inner {
 	aspect-ratio: 1/1;
 }
 .rbc-now button {
-	background-color: var(--mui-palette-primary-p4);
+	background-color: var(--mui-palette-primary-main);
 	color: var(--mui-palette-primary-contrastText);
 }
 /*# sourceMappingURL=react-big-calendar.css.map */
